Refactor into modules + prepare for multi-threaded workers